--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
+  "changed": "2023.07.20, 16:54",
   "dependencies": {
     "mongodb": "^4.8.1",
     "next": "latest",
@@ -15,5 +11,11 @@
     "@types/node": "18.7.5",
     "@types/react": "16.9.17",
     "typescript": "4.6.3"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "export-UNUSED": "next export",
+    "start": "next start"
   }
 }
